Fix color of search bar in header on small screens

--- a/styles/header-styles.css
+++ b/styles/header-styles.css
@@ -113,6 +113,11 @@ nav {
     margin: 28px 0;
   }
 
+  .nav-input,
+  .search-icon {
+    background-color: #FFF;
+  }
+
   .show {
     display: flex;
   }
